--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="header">
     <a href="#" class="logo"><img src="./images/logo.png" alt="로고"></a>
     <ul>
-      <li><a href="#">people</a></li>
+      <li><a href="#">People</a></li>
       <li><a href="#">Travel</a></li>
       <li><a href="#">Technology</a></li>
       <li><a href="#">Animals</a></li>
@@ -78,59 +78,107 @@
     <!-- section03 -->
     <div class="section sec_03">
       <div class="container">
-        <div class="photo">사진</div>
-        <div class="text">글자들</div>
-      </div>
-    </div>
-
+        <div class="photo">
+          <img src="./images/photo_02.png" alt="사진">
+        </div> 
+        <div class="text">
+          <h4>Introduce Unsplash for Brands</h4>
+          <p class="txt_01">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+            <p class="txt_02">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+              tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+              <div class="avatar"> 
+              <img src="./images/avator_05.png" alt="아바타">  
+              <span>Dhaka Oke, Product Designer</span>
+              </div>        
+            </div>
+          </div>
+        </div>
      <!-- section04 -->
      <div class="section sec_04">
       <div class="container">
-        <div class="text">글자들</div>
-        <div class="photo">사진</div>
+        <div class="text">
+          <h4>What you’ll be building</h4>
+          <p class="txt_01">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+            <p class="txt_02">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+              tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+              <div class="avatar"> 
+              <img src="./images/avator_05.png" alt="아바타5">  
+              <span>Dhaka Oke, Product Designer</span>
+              </div>         
+            </div>
+            <div class="photo">
+              <img src="./images/photo_03.png" alt="사진">
+            </div>
       </div>
     </div>
 
     <!-- section05 -->
     <div class="section sec_05">
       <div class="container">
-        <div class="banner">배너</div>
-        <ul>
-          <li>글1</li>
-          <li>글2</li>
-        </ul>
+        <div class="banner">
+          <div class="banner_text">
+            <p class="name">Author name</p>
+            <h4>The New York Public<br/> Library joins Unsplash</h4>
+            <a href="#">Read More</a>
+          </div>
+        </div>
+        <ul class="blog">
+          <li>
+            <h4>Explore the world through collections of beautiful photos</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</p>
+            <span>Read More</span>
+          </li>
+          <li>
+            <h4>Stories behind the creation of the open photography community at Unsplash</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</p>
+            <span>Read More</span>
+          </li> 
+        </ul>   
       </div>
     </div>
 
      <!-- section06 -->
      <div class="section sec_06">
+       <div class="container">
       <h3>Lorem ipsum dolor tempor incididunt.</h3>
-      <div>아바타</div>
+      <div class="avatar"><img src="./images/avator_06.png" alt="아바타"></div>
       <p>Maria Lopez, VP of Design at Meshery</p>
     </div>
+  </div>
 
      <!-- section07 -->
      <div class="section sec_07">
+       <div class="container">
       <h3>Make something awesome</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        Lorem ipsum dolor sit amet, consectetur<br/> adipiscing elit, sed do 
+        eiusmod tempor<br/> incididunt ut labore et dolore magna aliqua.
       </p>
-      <a href="#">Start free trial</a>
+      <a href="#" class="btn2">Start free trial</a>
     </div>
   </div>
+</div>
  
 <div class="footer">
   <div class="container">
     <div class="left">
-      <div class="botton_logo">하단로고</div>
+      <div class="botton_logo"><img src="./images/logo.png" alt="logo"></div>
       <p class="copyright">© 2010 — 2020</p>
       <p>Privacy — Terms</p>
     </div>
+
     <div class="right">
     <ul class="bottom_menu">
       <li>
-        <a href="#">product</a>
+        <a href="#">Product</a>
         <ul>
       <li><a href="#">product</a></li>
       <li><a href="#">product</a></li>
@@ -140,25 +188,25 @@
       <li>
         <a href="#">Features</a>
         <ul>
-      <li><a href="#">product</a></li>
-      <li><a href="#">product</a></li>
-      <li><a href="#">product</a></li>
+      <li><a href="#">Features</a></li>
+      <li><a href="#">Features</a></li>
+      <li><a href="#">Features</a></li>
         </ul>
       </li>
       <li>
         <a href="#">Resources</a>
         <ul>
-      <li><a href="#">product</a></li>
-      <li><a href="#">product</a></li>
-      <li><a href="#">product</a></li>
+      <li><a href="#">Resources</a></li>
+      <li><a href="#">Resources</a></li>
+      <li><a href="#">Resources</a></li>
         </ul>
       </li>
       <li>
         <a href="#">Company</a>
         <ul>
-      <li><a href="#">product</a></li>
-      <li><a href="#">product</a></li>
-      <li><a href="#">product</a></li>
+      <li><a href="#">Company</a></li>
+      <li><a href="#">Company</a></li>
+      <li><a href="#">Company</a></li>
         </ul>
       </li>
     </ul>
